@@ -1,4 +1,7 @@
 
+2009-04-12 22:54 Ali aliov@xfce.org 
+	 * : Provide the possibility to disable brightness control on key press by setting a xfconf property
+
 2009-04-12 21:29 Ali aliov@xfce.org 
 	 * : Enable HAL power button event even if the button is correctly mapped in X, as X doesn't always generates events for it
 
